
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ kind; } ;
typedef TYPE_1__ Type ;


 scalar_t__ TYPE_FUNC ;
 scalar_t__ TYPE_PTR ;

bool is_ptr_like_type(Type *type) {
    return type && (type->kind == TYPE_PTR || type->kind == TYPE_FUNC);
}
